--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,10 @@
 image:
   file: .gitpod.Dockerfile
+tasks:
+- init: >
+    flutter upgrade && 
+    flutter update-packages --force-upgrade &&
+    flutter run -d web-server --no-resident # prebuilds the app
 vscode:
   extensions:
     - Dart-Code.dart-code@3.10.0-beta.2:tUOuxmX97tnVRlRhi8Z1og==
